<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    android:layout_marginHorizontal="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:text="@string/delete_prompt"
            android:textStyle="bold"
            android:layout_marginBottom="32dp"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/delete_text"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel_btn"
                android:textStyle="bold"
                android:backgroundTint="@color/lightBlue"
                app:cornerRadius="5dp"
                android:layout_marginEnd="32dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDelete"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/cfm_delete"
                android:textStyle="bold"
                android:backgroundTint="@color/red"
                app:cornerRadius="5dp"
                />
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>