<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/ml"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:src="@drawable/ic_info_outlined"
            android:layout_marginBottom="@dimen/ml" />

        <TextView
            android:id="@+id/tvLogoutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout_text"
            android:textSize="@dimen/text_ml"
            android:textStyle="bold"
            android:gravity="center"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/tvLogoutMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/logout_confirmation"
            android:textSize="@dimen/text_m"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="@string/cancel_btn"
                android:textStyle="bold"
                android:backgroundTint="@color/lightBlue"
                app:cornerRadius="5dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogout"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/logout_btn"
                android:textStyle="bold"
                android:backgroundTint="@color/red"
                app:cornerRadius="5dp"/>
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
