<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.AuthFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/l"
        android:layout_marginBottom="@dimen/xxxxxl">

        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="140dp"
            android:layout_height="140dp"

            android:src="@drawable/note_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m"
            android:text="@string/greet_text"
            android:textSize="@dimen/text_xxxl"
            android:textStyle="bold"
            android:letterSpacing="0.05"
            android:textColor="@color/black"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s"
            android:text="@string/sub_text"
            android:textSize="@dimen/text_xl"
            android:textColor="@color/darkGrey"
            android:textAlignment="center"/>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoogleSignIn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/l"
            android:text="@string/sign_in_google"
            android:textColor="@color/darkGrey"
            android:drawableLeft="@drawable/ic_google"
            android:padding="@dimen/s"
            app:cornerRadius="@dimen/xxxxs"
            app:backgroundTint="@color/white"
            app:strokeWidth="1dp"
            app:strokeColor="@color/grey"/>

    </LinearLayout>
</LinearLayout>
