<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.manageNote.addNote.AddNoteFragment">

    <TextView
        android:id="@+id/manageNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:gravity="center"
        android:padding="14dp"
        android:text="@string/add_note"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="24dp"
        android:layout_weight="0.5"
        android:gravity="start"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_bg"
            android:hint="@string/enter_title"
            android:padding="14dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etDesc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/text_bg"
            android:gravity="start"
            android:hint="@string/enter_desc"
            android:minLines="7"
            android:padding="14dp"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/colorBox1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="8dp"
                android:background="@color/green" />

            <ImageView
                android:id="@+id/colorBox1Selected"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignBottom="@+id/colorBox1"
                android:layout_marginHorizontal="8dp"
                android:padding="10sp"
                android:src="@drawable/ic_tick"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/colorBox2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="8dp"
                android:background="@color/cyan" />

            <ImageView
                android:id="@+id/colorBox2Selected"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignBottom="@+id/colorBox2"
                android:layout_marginHorizontal="8dp"
                android:padding="10sp"
                android:src="@drawable/ic_tick"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/colorBox3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="8dp"
                android:background="@color/red" />

            <ImageView
                android:id="@+id/colorBox3Selected"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignBottom="@+id/colorBox3"
                android:layout_marginHorizontal="8dp"
                android:padding="10sp"
                android:src="@drawable/ic_tick"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/colorBox4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="8dp"
                android:background="@color/purple" />

            <ImageView
                android:id="@+id/colorBox4Selected"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignBottom="@+id/colorBox4"
                android:layout_marginHorizontal="8dp"
                android:padding="10sp"
                android:src="@drawable/ic_tick"
                android:visibility="gone" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/colorBox5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="8dp"
                android:background="@color/yellow" />

            <ImageView
                android:id="@+id/colorBox5Selected"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignBottom="@+id/colorBox5"
                android:layout_marginHorizontal="8dp"
                android:padding="10sp"
                android:src="@drawable/ic_tick"
                android:visibility="gone" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnManageAddOrEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightBlue"
            android:text="@string/add_btn"
            android:textSize="16sp"
            app:cornerRadius="8dp" />

    </LinearLayout>
</LinearLayout>